--- a/calc/nginx.conf
+++ b/calc/nginx.conf
@@ -1,8 +1,11 @@
-server {
+events {}
 
-	listen 80;
-
-	location 127.0.0.1 {
-		proxy_pass http://127.0.0.1:50051;
-	}
+http {
+    server {
+        listen 8080 http2;
+ 
+        location / {
+            grpc_pass grpc://grpc-go-calc-server:50051;
+        }
+    }
 }
